--- a/keck-escape-room/src/App.css
+++ b/keck-escape-room/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap");
+
 .App {
   text-align: center;
 }
@@ -11,6 +13,31 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}
+
+header {
+  background-color: black;
+  background-image: radial-gradient(rgba(0, 150, 0, 0.75), black 120%);
+  height: 100vh;
+  font-size: large;
+  color: white;
+  font-family: "Press Start 2P";
+}
+
+.logInButton {
+  margin-top: 70px;
+  width: 400px;
+  font-size: 30px;
+  font-family: inherit;
+  padding: 30px;
+  letter-spacing: 8px;
+  transition: 0.4s ease-in-out;
+  background-image: url("./codeGif.gif");
+}
+
+.logInButton:hover {
+  color: white;
+  transition: 0.6s ease-in;
 }
 
 .App-header {
