Fixed up sign in page

--- a/keck-escape-room/src/components/App.css
+++ b/keck-escape-room/src/components/App.css
@@ -1,53 +1,19 @@
 @import url("https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap");
 
-.App {
-  text-align: center;
+body {
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-header {
+#App-header {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  justify-content: center;
+  align-items: center;
   background-color: black;
   background-image: radial-gradient(rgba(0, 120, 0, 1), black 80%);
   height: 100vh;
   font-size: large;
   color: white;
   font-family: "Press Start 2P";
-}
-
-.logInButton {
-  margin-top: 70px;
-  width: 400px;
-  font-size: 30px;
-  font-family: inherit;
-  padding: 30px;
-  letter-spacing: 8px;
-  transition: 0.4s cubic-bezier(1, 0, 0, 1);
-  border-radius: 4px;
-  background-image: url("./codeGif.gif");
-}
-
-.logInButton:hover {
-  color: white;
-  transition: 1s ease-out;
-  width: 450px;
-  font-size: 40px;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
