--- a/keck-escape-room/src/components/NavBar.css
+++ b/keck-escape-room/src/components/NavBar.css
@@ -5,6 +5,9 @@
 
 div #nav-bar-container {
   color: black;
-  font-family: "Courier New", Courier, monospace;
-  background-color: lightgreen;
+}
+
+a {
+  margin: 100px;
+  font: inherit;
 }
