moved images to images folder and started to read from database

--- a/keck-escape-room/src/services/authService.css
+++ b/keck-escape-room/src/services/authService.css
@@ -14,7 +14,7 @@
   letter-spacing: 8px;
   transition: 0.4s cubic-bezier(1, 0, 0, 1);
   border-radius: 4px;
-  background-image: url("./codeGif.gif");
+  background-image: url("../images/codeGif.gif");
 }
 
 #logInButton:hover {
