deleted logo.svg file and now able to read from database

--- a/keck-escape-room/src/components/App.css
+++ b/keck-escape-room/src/components/App.css
@@ -30,3 +30,11 @@ header {
   grid-area: header;
   justify-self: center;
 }
+
+#game-loader {
+  background-color: blue;
+}
+
+#game-container {
+  background-color: blueviolet;
+}
