--- a/keck-escape-room/src/components/NavBar.css
+++ b/keck-escape-room/src/components/NavBar.css
@@ -1,5 +1,5 @@
-div #nav-bar-container {
+/* div #nav-bar-container {
   color: black;
   font-family: "Courier New", Courier, monospace;
   background-color: lightgreen;
-}
+} */
