--- a/keck-escape-room/src/components/NavBar.css
+++ b/keck-escape-room/src/components/NavBar.css
@@ -1,13 +1,8 @@
-/* div #nav-header {
-  background-color: aqua;
-
-} */
-
 div #nav-bar-container {
   color: black;
 }
 
 a {
-  margin: 100px;
+  margin: 9vw;
   font: inherit;
 }
