--- a/keck-escape-room/src/components/App.css
+++ b/keck-escape-room/src/components/App.css
@@ -98,3 +98,17 @@ a {
   color: teal;
   text-align: center;
 }
+
+#signInContainer {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  grid-row: 1 / span 2;
+  grid-column: 2 / 2;
+  justify-self: center;
+}
+
+#logInButton {
+  height: 30vh;
+  margin: auto;
+}
