--- a/keck-escape-room/src/components/App.css
+++ b/keck-escape-room/src/components/App.css
@@ -8,7 +8,7 @@ body {
 .App {
   display: grid;
   grid-template-rows: auto 1fr auto;
-  grid-template-columns: auto 1fr auto;
+  grid-template-columns: 10rem 1fr 10rem;
   margin: 0;
   padding: 0;
   height: 100vh;
@@ -85,11 +85,9 @@ button:hover {
 #signOutContainer {
   grid-row: 1 / span 1;
   grid-column: 3 / 3;
-  margin: 0 0 0 10vw;
   font-size: small;
   padding-top: 20px;
   padding-right: 0vw;
-  width: 29vw;
 }
 
 #joke-container {
