--- a/keck-escape-room/src/components/App.css
+++ b/keck-escape-room/src/components/App.css
@@ -5,10 +5,22 @@ body {
   padding: 0;
 }
 
+p {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  color: teal;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   display: grid;
   grid-template-rows: auto 1fr auto;
-  grid-template-columns: 10rem 1fr 10rem;
+  grid-template-columns: 1fr auto 1fr;
   margin: 0;
   padding: 0;
   height: 100vh;
@@ -50,8 +62,21 @@ body {
   font-family: "Courier New", Courier, monospace;
   grid-row: 1 / span 1;
   grid-column: 2 / 2;
-  margin: 0 4.5vw 0 4.5vw;
   font: inherit;
+}
+
+#right-sidebar {
+  padding: 1rem;
+}
+
+.links {
+  padding-top: 1rem;
+}
+
+#next-link {
+  padding: 0;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 button {
@@ -72,7 +97,6 @@ button {
 Button {
   height: 8vh;
   width: 10vw;
-  margin-left: 4vw;
   font-size: 1.6vh;
 }
 
@@ -92,12 +116,6 @@ button:hover {
 
 #joke-container {
   font-size: 1.5vw;
-  width: 35vw;
-}
-
-a {
-  color: teal;
-  text-align: center;
 }
 
 #signInContainer {
